--- a/README.Rmd
+++ b/README.Rmd
@@ -97,17 +97,23 @@ invisible(lapply(borders, function(b)
 
 Next, we compute the run-times for the previous examples and compare the 
 approximations of the un-normalized log weights, $\log \tilde W_i$, and 
-normalized weights, $W_i$.
+normalized weights, $W_i$. The `n_threads` sets the number of threads to 
+use in the approximation method (one could easily implement the naive method 
+support parallel computation).
 
 ```{r comp_run_times, cache = 1}
 # run-times
 microbenchmark::microbenchmark(
-  `dual tree` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3),
-  naive       = FSKA:::naive(X = X, ws = ws, Y = X), times = 10L)
+  `dual tree 1` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, 
+                               eps = 1e-3, n_threads = 1L),
+  `dual tree 6` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, 
+                               eps = 1e-3, n_threads = 6L),
+  naive         = FSKA:::naive(X = X, ws = ws, Y = X), times = 10L)
 
 # The functions return the un-normalized log weights. We first compare
 # the result on this scale
-o1 <- FSKA:::FSKA  (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3)
+o1 <- FSKA:::FSKA  (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3, 
+                    n_threads = 1L)
 o2 <- FSKA:::naive(X = X, ws = ws, Y = X)
 
 all.equal(o1, o2)
@@ -136,7 +142,8 @@ Ns <- 2^(7:15)
 run_times <- lapply(Ns, function(N){
   invisible(list2env(get_sims(N), environment()))
   microbenchmark::microbenchmark(
-    `dual tree` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3),
+    `dual tree` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3, 
+                               n_threads = 6L),
     naive       = FSKA:::naive(X = X, ws = ws, Y = X), times = 3L)
 })
 
@@ -144,7 +151,8 @@ Ns_xtra <- 2^(16:20)
 run_times_xtra <- lapply(Ns_xtra, function(N){
   invisible(list2env(get_sims(N), environment()))
   microbenchmark::microbenchmark(
-    `dual tree` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3),
+    `dual tree` = FSKA:::FSKA (X = X, ws = ws, Y = X, N_min = 10L, eps = 1e-3, 
+                               n_threads = 6L),
     times = 3L)
 })
 ```
@@ -156,7 +164,7 @@ meds_xtra <-
   sapply(run_times_xtra, function(x) summary(x, unit = "s")[, "median"])
 meds <- rbind(meds, cbind(meds_xtra, NA_real_))
 dimnames(meds) <- list(
-  N = c(Ns, Ns_xtra) * 3L, method = c("Dual tree", "Naive"))
+  N = c(Ns, Ns_xtra) * 3L, method = c("Dual-tree", "Naive"))
 meds
 par(mar = c(5, 4, .5, .5))
 matplot(c(Ns, Ns_xtra) * 3L, meds, lty = 1:2, type = "l", log = "xy", 
