--- a/README.bib
+++ b/README.bib
@@ -1,8 +1,51 @@
+@article{Polyak92,
+author = {Polyak, B. and Juditsky, A.},
+title = {Acceleration of Stochastic Approximation by Averaging},
+journal = {SIAM Journal on Control and Optimization},
+volume = {30},
+number = {4},
+pages = {838-855},
+year = {1992},
+doi = {10.1137/0330046},
+
+URL = {
+        https://doi.org/10.1137/0330046
+
+},
+eprint = {
+        https://doi.org/10.1137/0330046
+
+}
+
+}
+
 @INPROCEEDINGS{Gray03,
     author = {Alexander G. Gray and Andrew W. Moore},
     title = {Rapid Evaluation of Multiple Density Models},
     booktitle = {AISTATS},
     year = {2003}
+}
+
+@article{Lin05,
+author = {Ming T Lin and Junni L Zhang and Qiansheng Cheng and Rong Chen},
+title = {Independent Particle Filters},
+journal = {Journal of the American Statistical Association},
+volume = {100},
+number = {472},
+pages = {1412-1421},
+year  = {2005},
+publisher = {Taylor & Francis},
+doi = {10.1198/016214505000000349},
+
+URL = {
+        https://doi.org/10.1198/016214505000000349
+
+},
+eprint = {
+        https://doi.org/10.1198/016214505000000349
+
+}
+
 }
 
 @inproceedings{Klaas06,
@@ -19,4 +62,17 @@
  acmid = {1143905},
  publisher = {ACM},
  address = {New York, NY, USA},
+}
+
+@article{Poyiadjis11,
+ ISSN = {00063444},
+ URL = {http://www.jstor.org/stable/29777165},
+ author = {Poyiadjis, George and Doucet, Arnaud and Singh, Sumeetpal S. },
+ journal = {Biometrika},
+ number = {1},
+ pages = {65--80},
+ publisher = {Biometrika Trust},
+ title = {Particle approximations of the score and observed information matrix in state space models with application to parameter estimation},
+ volume = {98},
+ year = {2011}
 }
